// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`cell reducer > can run a stale cell 1`] = `
{
  "code": "mo.slider()",
  "config": {},
  "consoleOutputs": [],
  "edited": false,
  "errored": false,
  "id": "1",
  "interrupted": false,
  "lastCodeRun": "mo.slider()",
  "name": "__",
  "outline": null,
  "output": null,
  "runElapsedTimeMs": null,
  "runStartTimestamp": null,
  "serializedEditorState": null,
  "status": "queued",
  "stopped": false,
}
`;

exports[`cell reducer > can run a stale cell 2`] = `
{
  "code": "mo.slider()",
  "config": {},
  "consoleOutputs": [],
  "edited": false,
  "errored": false,
  "id": "1",
  "interrupted": false,
  "lastCodeRun": "mo.slider()",
  "name": "__",
  "outline": null,
  "output": null,
  "runElapsedTimeMs": null,
  "runStartTimestamp": null,
  "serializedEditorState": null,
  "status": "stale",
  "stopped": false,
}
`;

exports[`cell reducer > can run a stopped cell 1`] = `
{
  "code": "mo.md('This has an ancestor that was stopped')",
  "config": {},
  "consoleOutputs": [],
  "edited": false,
  "errored": false,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": "mo.md('This has an ancestor that was stopped')",
  "name": "__",
  "outline": null,
  "output": null,
  "runElapsedTimeMs": null,
  "runStartTimestamp": null,
  "serializedEditorState": null,
  "status": "queued",
  "stopped": false,
}
`;

exports[`cell reducer > can run a stopped cell 2`] = `
{
  "code": "mo.md('This has an ancestor that was stopped')",
  "config": {},
  "consoleOutputs": [],
  "edited": false,
  "errored": false,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": "mo.md('This has an ancestor that was stopped')",
  "name": "__",
  "outline": null,
  "output": null,
  "runElapsedTimeMs": null,
  "runStartTimestamp": null,
  "serializedEditorState": null,
  "status": "idle",
  "stopped": false,
}
`;

exports[`cell reducer > can run a stopped cell 3`] = `
{
  "code": "mo.md('This has an ancestor that was stopped')",
  "config": {},
  "consoleOutputs": [],
  "edited": false,
  "errored": false,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": "mo.md('This has an ancestor that was stopped')",
  "name": "__",
  "outline": null,
  "output": {
    "channel": "marimo-error",
    "data": [
      {
        "msg": "This cell wasn't run because an ancestor was stopped with \`mo.stop\`: ",
        "raising_cell": "2",
        "type": "ancestor-stopped",
      },
    ],
    "mimetype": "application/vnd.marimo+error",
    "timestamp": 20,
  },
  "runElapsedTimeMs": null,
  "runStartTimestamp": null,
  "serializedEditorState": null,
  "status": "idle",
  "stopped": true,
}
`;

exports[`cell reducer > can run a stopped cell 4`] = `
{
  "code": "mo.md('This has an ancestor that was stopped')",
  "config": {},
  "consoleOutputs": [],
  "edited": false,
  "errored": false,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": "mo.md('This has an ancestor that was stopped')",
  "name": "__",
  "outline": null,
  "output": {
    "channel": "marimo-error",
    "data": [
      {
        "msg": "This cell wasn't run because an ancestor was stopped with \`mo.stop\`: ",
        "raising_cell": "2",
        "type": "ancestor-stopped",
      },
    ],
    "mimetype": "application/vnd.marimo+error",
    "timestamp": 20,
  },
  "runElapsedTimeMs": null,
  "runStartTimestamp": null,
  "serializedEditorState": null,
  "status": "queued",
  "stopped": true,
}
`;

exports[`cell reducer > can run a stopped cell 5`] = `
{
  "code": "mo.md('This has an ancestor that was stopped')",
  "config": {},
  "consoleOutputs": [],
  "edited": false,
  "errored": false,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": "mo.md('This has an ancestor that was stopped')",
  "name": "__",
  "outline": null,
  "output": null,
  "runElapsedTimeMs": null,
  "runStartTimestamp": 40,
  "serializedEditorState": null,
  "status": "running",
  "stopped": false,
}
`;

exports[`cell reducer > can run cell and receive cell messages 1`] = `
{
  "code": "",
  "config": {},
  "consoleOutputs": [],
  "edited": false,
  "errored": false,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": null,
  "name": "__",
  "outline": null,
  "output": null,
  "runElapsedTimeMs": null,
  "runStartTimestamp": null,
  "serializedEditorState": null,
  "status": "idle",
  "stopped": false,
}
`;

exports[`cell reducer > can run cell and receive cell messages 2`] = `
{
  "code": "import marimo as mo",
  "config": {},
  "consoleOutputs": [],
  "edited": true,
  "errored": false,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": null,
  "name": "__",
  "outline": null,
  "output": null,
  "runElapsedTimeMs": null,
  "runStartTimestamp": null,
  "serializedEditorState": null,
  "status": "idle",
  "stopped": false,
}
`;

exports[`cell reducer > can run cell and receive cell messages 3`] = `
{
  "code": "import marimo as mo",
  "config": {},
  "consoleOutputs": [],
  "edited": false,
  "errored": false,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": "import marimo as mo",
  "name": "__",
  "outline": null,
  "output": null,
  "runElapsedTimeMs": null,
  "runStartTimestamp": null,
  "serializedEditorState": null,
  "status": "idle",
  "stopped": false,
}
`;

exports[`cell reducer > can run cell and receive cell messages 4`] = `
{
  "code": "import marimo as mo",
  "config": {},
  "consoleOutputs": [],
  "edited": false,
  "errored": false,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": "import marimo as mo",
  "name": "__",
  "outline": null,
  "output": null,
  "runElapsedTimeMs": null,
  "runStartTimestamp": null,
  "serializedEditorState": null,
  "status": "queued",
  "stopped": false,
}
`;

exports[`cell reducer > can run cell and receive cell messages 5`] = `
{
  "code": "import marimo as mo",
  "config": {},
  "consoleOutputs": [],
  "edited": false,
  "errored": false,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": "import marimo as mo",
  "name": "__",
  "outline": null,
  "output": null,
  "runElapsedTimeMs": null,
  "runStartTimestamp": 20,
  "serializedEditorState": null,
  "status": "running",
  "stopped": false,
}
`;

exports[`cell reducer > can run cell and receive cell messages 6`] = `
{
  "code": "import marimo as mo",
  "config": {},
  "consoleOutputs": [
    {
      "channel": "console",
      "data": "hello!",
      "mimetype": "text/plain",
      "timestamp": 0,
    },
  ],
  "edited": false,
  "errored": false,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": "import marimo as mo",
  "name": "__",
  "outline": null,
  "output": null,
  "runElapsedTimeMs": null,
  "runStartTimestamp": 20,
  "serializedEditorState": null,
  "status": "running",
  "stopped": false,
}
`;

exports[`cell reducer > can run cell and receive cell messages 7`] = `
{
  "code": "import marimo as mo",
  "config": {},
  "consoleOutputs": [
    {
      "channel": "console",
      "data": "hello!hello!",
      "mimetype": "text/plain",
      "timestamp": 0,
    },
  ],
  "edited": false,
  "errored": false,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": "import marimo as mo",
  "name": "__",
  "outline": null,
  "output": {
    "channel": "output",
    "data": "ok",
    "mimetype": "text/plain",
    "timestamp": 0,
  },
  "runElapsedTimeMs": 13000,
  "runStartTimestamp": null,
  "serializedEditorState": null,
  "status": "idle",
  "stopped": false,
}
`;

exports[`cell reducer > can run cell and receive cell messages 8`] = `
{
  "code": "import marimo as mo
import numpy",
  "config": {},
  "consoleOutputs": [
    {
      "channel": "console",
      "data": "hello!hello!",
      "mimetype": "text/plain",
      "timestamp": 0,
    },
  ],
  "edited": true,
  "errored": false,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": "import marimo as mo",
  "name": "__",
  "outline": null,
  "output": {
    "channel": "output",
    "data": "ok",
    "mimetype": "text/plain",
    "timestamp": 0,
  },
  "runElapsedTimeMs": 13000,
  "runStartTimestamp": null,
  "serializedEditorState": null,
  "status": "idle",
  "stopped": false,
}
`;

exports[`cell reducer > can run cell and receive cell messages 9`] = `
{
  "code": "import marimo as mo",
  "config": {},
  "consoleOutputs": [
    {
      "channel": "console",
      "data": "hello!hello!",
      "mimetype": "text/plain",
      "timestamp": 0,
    },
  ],
  "edited": false,
  "errored": false,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": "import marimo as mo",
  "name": "__",
  "outline": null,
  "output": {
    "channel": "output",
    "data": "ok",
    "mimetype": "text/plain",
    "timestamp": 0,
  },
  "runElapsedTimeMs": 13000,
  "runStartTimestamp": null,
  "serializedEditorState": null,
  "status": "idle",
  "stopped": false,
}
`;

exports[`cell reducer > can run cell and receive cell messages 10`] = `
{
  "code": "import marimo as mo
import numpy",
  "config": {},
  "consoleOutputs": [
    {
      "channel": "console",
      "data": "hello!hello!",
      "mimetype": "text/plain",
      "timestamp": 0,
    },
  ],
  "edited": true,
  "errored": false,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": "import marimo as mo",
  "name": "__",
  "outline": null,
  "output": {
    "channel": "output",
    "data": "ok",
    "mimetype": "text/plain",
    "timestamp": 0,
  },
  "runElapsedTimeMs": 13000,
  "runStartTimestamp": null,
  "serializedEditorState": null,
  "status": "idle",
  "stopped": false,
}
`;

exports[`cell reducer > can run cell and receive cell messages 11`] = `
{
  "code": "import marimo as mo
import numpy",
  "config": {},
  "consoleOutputs": [
    {
      "channel": "console",
      "data": "hello!hello!",
      "mimetype": "text/plain",
      "timestamp": 0,
    },
  ],
  "edited": false,
  "errored": true,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": "import marimo as mo
import numpy",
  "name": "__",
  "outline": null,
  "output": {
    "channel": "marimo-error",
    "data": [
      {
        "exception_type": "ValueError",
        "msg": "Oh no!",
        "type": "exception",
      },
    ],
    "mimetype": "application/vnd.marimo+error",
    "timestamp": 0,
  },
  "runElapsedTimeMs": 11000,
  "runStartTimestamp": null,
  "serializedEditorState": null,
  "status": "idle",
  "stopped": false,
}
`;

exports[`cell reducer > can run cell and receive cell messages 12`] = `
{
  "code": "import marimo as mo
import numpy",
  "config": {},
  "consoleOutputs": [
    {
      "channel": "console",
      "data": "hello!hello!",
      "mimetype": "text/plain",
      "timestamp": 0,
    },
  ],
  "edited": false,
  "errored": false,
  "id": "0",
  "interrupted": true,
  "lastCodeRun": "import marimo as mo
import numpy",
  "name": "__",
  "outline": null,
  "output": {
    "channel": "marimo-error",
    "data": [
      {
        "type": "interruption",
      },
    ],
    "mimetype": "application/vnd.marimo+error",
    "timestamp": 0,
  },
  "runElapsedTimeMs": 11000,
  "runStartTimestamp": null,
  "serializedEditorState": null,
  "status": "idle",
  "stopped": false,
}
`;
